@@ -1,5 +1,6 @@
 package edu.calpoly.csc305.debugging;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -12,8 +13,20 @@ public class Thesaurus {
     synonyms = new HashMap<>();
   }
 
+  /** this method will add a key value pair to a map of alternative words.
+   *
+   * @param word the key to put or replace into the map
+   * @param alternatives the values to place or add to the key in the map
+   */
   public void addAlternatives(String word, String ... alternatives) {
-    synonyms.get(word).addAll(Arrays.asList(alternatives));
+    if (synonyms.containsKey(word)) {
+      List<String> alt = new ArrayList<>();
+      alt.addAll(List.of(alternatives));
+      alt.addAll(synonyms.get(word));
+      synonyms.replace(word, alt);
+    } else {
+      synonyms.put(word, Arrays.asList(alternatives));
+    }
   }
 
   public List<String> alternatives(String word) {
